old/rust/target/debug/build/eyre-758058abd94bf73b/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> d:\Work_Space\etc\calc_server\target\debug\build\eyre-758058abd94bf73b\out\probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
